--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/ugali-fish.html">
-        Fried Fish with Tomato Gravy and Ugali</a>
+    <a href="./recipes/ugali-fish.html"
+    target="_blank" rel="noreferrer">Fried Fish with Tomato Gravy and Ugali
+    </a>
     
     
 </body>
