--- a/recipes/ugali-fish.html
+++ b/recipes/ugali-fish.html
@@ -3,11 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RECIPES</title>
 </head>
 <body>
     <h1>Fried Fish with Tomato Gravy and Ugali</h1>
+    <a href="../index.html" target="_blank" rel="noreferrer">Home</a>
 
-    <a href="../index.html">Home</a>
+    <img src="../ugali-fish.jpg" alt="A Plate of Ugali, Greens, Sliced Avocado and Grilled Fish with Tomato Gravy">
+
+    <h2>Description</h2>
+    <p>We Kenyans love our fish and why should we not? We get fresh Tilapia fish from Lake Victoria in the Nyanza province. 
+        This Fried fish with tomato gravy is served with a Kenyan staple, Ugali. 
+        The fish is deep fried until crispy and coated with a thick tomato gravy. 
+        I also serve it with some collard greens and avocado.</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Salt to taste</li>
+        <li>Oil for deep frying</li>
+        <li>3 tomatoes, crushed</li>
+        <li>2 tbsp tomato paste</li>
+        <li>3 tbsp coriander leaves, chopped</li>
+    </ul>
+
+    <p>For the Ugali</p>
+    <ul>
+        <li>3 cups water</li>
+        <li>1.5 cups maize flour</li>
+    </ul>
+
+    <h2>Instructions</h2>
+    <ol>
+        <li>Make 3 slits on each side of the tilapia fish about 1/2 an inch deep. 
+            Sprinkle salt on the fish and rub into the slits using your fingers.</li>
+        <li>Deep fry in hot oil for 15 minutes in total, flipping it around at the 9 minute mark. 
+            This will make the fish very crispy, just how we Kenyans enjoy it. Set aside.</li>
+        <li>To prepare the gravy, Heat oil in a pan. 
+            Add onions and saute for 45 seconds or until translucent.</li>
+        <li>Add tomatoes, tomato paste, coriander leaves and salt. Stir and let simmer for 5 minutes or until oil starts to ooze out of the sides. 
+            Add the fried fish into the gravy and coat both sides.</li>
+        <li>For the ugali: Bring the water to boil in a pot/sufuria. Add 1/2 cup maize meal to the boiling water. 
+            Adding a little bit of the meal to the water ensures that the water starts to roar which makes the perfect ugali. 
+            Stir using a wooden spatula and try to break any lumps apart.</li>
+        <li>Add the remaining flour and get stirring. Using the spatula, smoothen out any lumps that may have formed. 
+            If the ugali is not hard enough, add more flour. Lower the heat and keep working the ugali against the sides of the pot, getting rid of any lumps and also making sure it is evenly cooked.</li>
+        <li>Once cooked, mould it using the spatula and serve with the fried fish in tomato gravy, a side of cooked collard greens (sukumawiki) and an avocado.</li>
+    </ol>
+    
 </body>
 </html>
