Home page and three recipe pages complete
After completing the first ugali-fish recipe page, I created two more recipe pages
complete with pictures, text and links to and from the home page.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/ugali-fish.html"
-    target="_blank" rel="noreferrer">Fried Fish with Tomato Gravy and Ugali
-    </a>
-    
+    <ul>
+    <li><a href="./recipes/ugali-fish.html" target="_blank" rel="noreferrer">Fried Fish with Tomato Gravy and Ugali</a></li>
+    <li><a href="./recipes/matumbo-wetfry.html" target="_blank" rel="noreferrer"> Matumbo Wet Fry</a></li>
+    <li><a href="./recipes/chili-chicken-and-rice.html" target="_blank" rel="noreferrer"> Chilli Chicken and Rice</a></li>   
+
+    </ul>
     
 </body>
 </html>
